# pii_redactor_lightening

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: bootstrap.sh  build_shortcut.py  redact_clipboard.py  redact_via_shortcut.sh
src/redactor/: __init__.py  chunking.py  clipboard.py  logging_setup.py  main.py  model_redactor.py  pipeline.py  regex_redactor.py
tests/: test_env_config.py  test_regex_address_narrowing.py  test_us_and_india_regex.py
