[project]
name = "pii-redactor-lightening"
version = "0.1.0"
description = "Minimal local clipboard PII redaction tool for macOS (regex + GLiNER)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "loguru>=0.7.2",
    "gliner2>=1.2.4",
    "torch>=2.1.0",
    "typer>=0.12.0",
    "bharataddress>=0.2.2",
]

[project.scripts]
redact-clipboard = "redactor.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redactor"]
